Removed bullets, upgraded fonts, padding & margin for h3, h4

--- a/NestedAccordion/css/styles.css
+++ b/NestedAccordion/css/styles.css
@@ -2,24 +2,37 @@
 
 body {
   color: lightgray;
+  font-family: Lato, Calibri, Arial, sans-serif;
+  line-height: 30px;
+  margin-left: 45px;
+  margin-right: 45px;
 }
 
 h3, h4 {
-  color: cornflowerblue;
-
+  color: cornflowerblue
 }
+
 h3 {
   color: cornflowerblue;
-  font-size: 40pt;
+  font-size: 30pt;
   border-bottom: 1px solid lightgray;
+  padding-bottom: 20px;
+
 }
 
 h4 {
-  font-size: 30pt;
+  font-size: 1.2em;
+  text-transform: uppercase;
+
+
 }
 
 h5 {
   color: darkgrey;
+}
+
+li {
+  display: block;
 }
 
 .js .cbp-ntcontent {
