--- a/FullWidthTabs/css/styles.css
+++ b/FullWidthTabs/css/styles.css
@@ -4,10 +4,51 @@ body {
 	color: cornflowerblue;
 }
 
+.tabs {
+	position: relative;
+	width: 100%;
+	font-weight: 300;
+	margin: 1em 0 2em;
+
+}
+
+.tabs nav {
+	text-align: center;
+	border-bottom-color: cornflowerblue;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	border-bottom-width: 100%;
+}
+
+.tabs nav ul {
+	display: inline-block;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.tabs nav ul li {
+	float: left;
+	display: block;
+	position: relative;
+	margin: 0 0.25em;
+	font-size: 25px;
+	padding: 0 25px 0 25px;
+	height: 50px;
+	line-height: 55px;
+
+}
+
+a {
+	text-decoration: none;
+	color: cornflowerblue;
+}
+
 .content section[id^="section-"] {
 	display: none;
 	padding-left: 1em;
 	padding-right: 1em;
+	padding-top: 50px;
 }
 
 .content section[id^="section"]:first-of-type {
